Removing previously used go code that has been replaced with the new … (#64)
Converting Wall to use python instead of Golang
